# ascii-convertor

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  ascii.app  cmake_install.cmake  mina.cpp
include/: include.hpp
src/: mina.cpp
web/: index.html  styles.css
